[gd_scene load_steps=24 format=3 uid="uid://digjsy3ikmea6"]

[ext_resource type="Script" path="res://world.gd" id="1_uskka"]
[ext_resource type="Script" path="res://Player.gd" id="2_dweeq"]
[ext_resource type="Script" path="res://PlayerBody.gd" id="3_y82wd"]
[ext_resource type="Script" path="res://Healthbar.gd" id="4_rt6ft"]
[ext_resource type="PrismMesh" uid="uid://bcberldsqek4f" path="res://stairs1.tres" id="4_wglta"]
[ext_resource type="Script" path="res://EnemyBody.gd" id="5_wla0m"]
[ext_resource type="Script" path="res://Label_FPS.gd" id="6_2yjxy"]
[ext_resource type="Shape3D" uid="uid://0t5f3d2dng7a" path="res://collision_standard.tres" id="7_i2qqr"]
[ext_resource type="Texture2D" uid="uid://cs3hftxwr2lkn" path="res://player_down_0.png" id="7_y5j1r"]
[ext_resource type="Script" path="res://Archer.gd" id="8_d1xfq"]
[ext_resource type="Script" path="res://Brawler.gd" id="9_e46km"]
[ext_resource type="Script" path="res://Mage.gd" id="10_ljkvt"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_n8lu1"]
radius = 1.0
height = 3.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_s2pbs"]
radius = 1.0
height = 3.0

[sub_resource type="NavigationMesh" id="NavigationMesh_s5f81"]
vertices = PackedVector3Array(-11.0587, 0.5, 6.75, -2.55873, 0.5, 1.5, -3.05873, 0.5, 1.25, -11.3087, 0.5, 6.25, -49.5587, 0.5, 24.75, -16.3087, 0.5, 5.75, -15.8087, 0.5, 5.25, -1.55873, 0.5, -49.5, -49.5587, 0.5, -49.5, -11.3087, 0.5, 6.25, -3.05873, 0.5, 1.25, -3.05873, 0.5, -1, -14.3087, 0.5, 5.25, -3.05873, 0.5, -1, -1.30873, 0.5, -1.25, -1.55873, 0.5, -49.5, -15.8087, 0.5, 5.25, -14.3087, 0.5, 5.25, -3.05873, 0.5, -1, -1.55873, 0.5, -49.5, -49.5587, 0.5, 24.75, -22.0587, 0.5, 24.75, -16.3087, 0.5, 5.75, -1.30873, 0.5, -1.25, -0.0587311, 0.5, -1.25, 0.191269, 0.5, -49.5, -1.55873, 0.5, -49.5, 0.191269, 0.5, -49.5, -0.0587311, 0.5, -1.25, 1.44127, 0.5, -1, 49.4413, 0.5, -1, 49.4413, 0.5, -49.5, 1.44127, 0.75, -0.25, -2.05873, 2.25, -0.25, -2.05873, 2.25, 0.5, 1.44127, 0.75, 0.5, 49.4413, 0.5, 1.25, 49.4413, 0.5, -1, 1.44127, 0.75, -0.25, 1.44127, 0.75, 0.5, 49.4413, 0.5, -1, 1.44127, 0.5, -1, 1.44127, 0.75, -0.25, 1.44127, 0.75, 0.5, 1.44127, 0.5, 1.25, 49.4413, 0.5, 1.25, -2.55873, 0.5, 1.5, -11.0587, 0.5, 6.75, -11.0587, 0.5, 8, 1.44127, 0.5, 1.25, 1.44127, 0.5, 1.25, -11.0587, 0.5, 8, -16.8087, 0.5, 26.25, -17.8087, 0.5, 49.5, 49.4413, 0.5, 49.5, 49.4413, 0.5, 1.25, -16.8087, 0.5, 26.25, -17.8087, 0.5, 26.75, -17.8087, 0.5, 49.5, -20.8087, 9.5, 23.75, -20.8087, 9.5, 24.75, -17.8087, 9.5, 25.5, -12.0587, 9.5, 7.5, -15.3087, 9.5, 6.25, -14.3087, 0.5, 6.75, -15.0587, 0.5, 6.75, -15.3087, 0.5, 7.25, -12.5587, 0.5, 8, -12.8087, 0.5, 7.25, -14.3087, 0.5, 6.75, -20.5587, 0.5, 24, -20.5587, 0.5, 24.5, -18.0587, 0.5, 25.25, -12.5587, 0.5, 8, -14.3087, 0.5, 6.75, -15.3087, 0.5, 7.25, -17.8087, 0.5, 49.5, -17.8087, 0.5, 26.75, -21.3087, 0.5, 25.75, -17.8087, 0.5, 49.5, -21.3087, 0.5, 25.75, -22.0587, 0.5, 24.75, -49.5587, 0.5, 24.75, -49.5587, 0.5, 49.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1), PackedInt32Array(5, 4, 6), PackedInt32Array(6, 4, 8), PackedInt32Array(6, 8, 7), PackedInt32Array(10, 9, 11), PackedInt32Array(11, 9, 12), PackedInt32Array(15, 14, 13), PackedInt32Array(17, 16, 18), PackedInt32Array(18, 16, 19), PackedInt32Array(22, 21, 20), PackedInt32Array(23, 26, 24), PackedInt32Array(24, 26, 25), PackedInt32Array(28, 27, 29), PackedInt32Array(29, 27, 30), PackedInt32Array(30, 27, 31), PackedInt32Array(35, 34, 32), PackedInt32Array(32, 34, 33), PackedInt32Array(39, 38, 36), PackedInt32Array(36, 38, 37), PackedInt32Array(42, 41, 40), PackedInt32Array(45, 44, 43), PackedInt32Array(47, 46, 48), PackedInt32Array(48, 46, 49), PackedInt32Array(51, 50, 52), PackedInt32Array(52, 50, 53), PackedInt32Array(53, 50, 55), PackedInt32Array(53, 55, 54), PackedInt32Array(58, 57, 56), PackedInt32Array(60, 59, 61), PackedInt32Array(61, 59, 62), PackedInt32Array(62, 59, 63), PackedInt32Array(66, 65, 64), PackedInt32Array(67, 69, 68), PackedInt32Array(71, 70, 72), PackedInt32Array(72, 70, 75), PackedInt32Array(72, 75, 74), PackedInt32Array(72, 74, 73), PackedInt32Array(78, 77, 76), PackedInt32Array(80, 79, 81), PackedInt32Array(81, 79, 82), PackedInt32Array(82, 79, 83)]
agent_height = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tyufa"]
vertex_color_use_as_albedo = true

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_246j5"]
data = PackedVector3Array(-2.5, 1, 0.75, 2.5, -1, 0.75, -2.5, -1, 0.75, -2.5, 1, -0.75, -2.5, -1, -0.75, 2.5, -1, -0.75, -2.5, 1, 0.75, -2.5, 1, -0.75, 2.5, -1, 0.75, -2.5, 1, -0.75, 2.5, -1, -0.75, 2.5, -1, 0.75, -2.5, 1, -0.75, -2.5, 1, 0.75, -2.5, -1, -0.75, -2.5, 1, 0.75, -2.5, -1, 0.75, -2.5, -1, -0.75, -2.5, -1, 0.75, 2.5, -1, 0.75, -2.5, -1, -0.75, 2.5, -1, 0.75, 2.5, -1, -0.75, -2.5, -1, -0.75)

[sub_resource type="BoxShape3D" id="BoxShape3D_hlsl0"]
size = Vector3(100, 2, 100)

[sub_resource type="BoxMesh" id="BoxMesh_iui3h"]
size = Vector3(100, 2, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_uf1g1"]
size = Vector3(20, 10, 4)

[sub_resource type="BoxMesh" id="BoxMesh_2k128"]
size = Vector3(20, 10, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sawlw"]
bg_color = Color(0.490196, 0.294118, 0.419608, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.694118, 0.764706, 1, 1)
expand_margin_right = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ixlpq"]
bg_color = Color(0.729412, 0, 0.294118, 1)
border_width_left = 3
border_width_top = 3
border_width_bottom = 3
border_color = Color(0.694118, 0.764706, 1, 1)

[node name="world" type="Node3D"]
script = ExtResource("1_uskka")

[node name="Player" type="Node" parent="."]
script = ExtResource("2_dweeq")

[node name="Camera_pivot" type="Node3D" parent="Player"]

[node name="Camera_FP" type="Camera3D" parent="Player/Camera_pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)

[node name="PlayerBody" type="CharacterBody3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0)
collision_layer = 11
collision_mask = 11
script = ExtResource("3_y82wd")

[node name="Mesh_player" type="MeshInstance3D" parent="Player/PlayerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
visible = false
mesh = SubResource("CapsuleMesh_n8lu1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/PlayerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CapsuleShape3D_s2pbs")

[node name="MagicShot_Timer" type="Timer" parent="Player"]
one_shot = true

[node name="Chain_Timer" type="Timer" parent="Player"]
one_shot = true

[node name="Leap_Timer" type="Timer" parent="Player"]
one_shot = true

[node name="Stun_Timer" type="Timer" parent="Player"]
one_shot = true

[node name="Slide_Timer" type="Timer" parent="Player"]
one_shot = true

[node name="Enemies" type="Node" parent="."]

[node name="EnemyBody" type="CharacterBody3D" parent="Enemies" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29.6216, 3.21981, 6.27504)
collision_layer = 7
collision_mask = 7
script = ExtResource("5_wla0m")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemies/EnemyBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = ExtResource("7_i2qqr")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="Enemies/EnemyBody"]
debug_enabled = true

[node name="Sprite3d" type="Sprite3D" parent="Enemies/EnemyBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60768, 0)
pixel_size = 0.2
billboard = 2
texture = ExtResource("7_y5j1r")

[node name="Attack_Timer" type="Timer" parent="Enemies/EnemyBody"]
one_shot = true

[node name="Ability_Timer" type="Timer" parent="Enemies/EnemyBody"]
one_shot = true

[node name="Stun_Timer" type="Timer" parent="Enemies/EnemyBody"]
one_shot = true

[node name="Archer" type="CharacterBody3D" parent="Enemies" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.9918, 0, 14.0919)
collision_layer = 7
collision_mask = 7
script = ExtResource("8_d1xfq")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="Enemies/Archer"]
debug_enabled = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemies/Archer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = ExtResource("7_i2qqr")

[node name="Sprite3d" type="Sprite3D" parent="Enemies/Archer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60768, 0)
pixel_size = 0.2
billboard = 2
texture = ExtResource("7_y5j1r")

[node name="Attack_Timer" type="Timer" parent="Enemies/Archer"]
one_shot = true

[node name="Ability_Timer" type="Timer" parent="Enemies/Archer"]
one_shot = true

[node name="Stun_Timer" type="Timer" parent="Enemies/Archer"]
one_shot = true

[node name="Brawler" type="CharacterBody3D" parent="Enemies"]
script = ExtResource("9_e46km")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="Enemies/Brawler"]
debug_enabled = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemies/Brawler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = ExtResource("7_i2qqr")

[node name="Sprite3d" type="Sprite3D" parent="Enemies/Brawler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60768, 0)
pixel_size = 0.2
billboard = 2
texture = ExtResource("7_y5j1r")

[node name="Attack_Timer" type="Timer" parent="Enemies/Brawler"]
one_shot = true

[node name="Ability_Timer" type="Timer" parent="Enemies/Brawler"]
one_shot = true

[node name="Stun_Timer" type="Timer" parent="Enemies/Brawler"]
one_shot = true

[node name="Mage" type="CharacterBody3D" parent="Enemies"]
script = ExtResource("10_ljkvt")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="Enemies/Mage"]
debug_enabled = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemies/Mage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = ExtResource("7_i2qqr")

[node name="Sprite3d" type="Sprite3D" parent="Enemies/Mage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60768, 0)
pixel_size = 0.2
billboard = 2
texture = ExtResource("7_y5j1r")

[node name="Attack_Timer" type="Timer" parent="Enemies/Mage"]
one_shot = true

[node name="Ability_Timer" type="Timer" parent="Enemies/Mage"]
one_shot = true

[node name="Stun_Timer" type="Timer" parent="Enemies/Mage"]
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="Map" type="Node" parent="."]

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="Map"]
navigation_mesh = SubResource("NavigationMesh_s5f81")

[node name="Stairs" type="Node3D" parent="Map/NavigationRegion3D"]

[node name="StaticBody3D" type="StaticBody3D" parent="Map/NavigationRegion3D/Stairs"]
collision_layer = 17
collision_mask = 17

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/NavigationRegion3D/Stairs/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.962177, 0)
mesh = ExtResource("4_wglta")
surface_material_override/0 = SubResource("StandardMaterial3D_tyufa")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Map/NavigationRegion3D/Stairs/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.962177, 0)
shape = SubResource("ConcavePolygonShape3D_246j5")

[node name="Ground" type="Node3D" parent="Map/NavigationRegion3D"]

[node name="static_floor" type="StaticBody3D" parent="Map/NavigationRegion3D/Ground"]
collision_layer = 17
collision_mask = 17
collision_priority = 2.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/NavigationRegion3D/Ground/static_floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_hlsl0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/NavigationRegion3D/Ground/static_floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0587294, -1, 0)
mesh = SubResource("BoxMesh_iui3h")
skeleton = NodePath("../..")

[node name="Wall" type="Node3D" parent="Map/NavigationRegion3D"]
transform = Transform3D(-0.299141, 0, -0.954209, 0, 1, 0, 0.954209, 0, -0.299141, -16.5331, 5.24763, 15.9922)

[node name="static_wall" type="StaticBody3D" parent="Map/NavigationRegion3D/Wall"]
collision_layer = 17
collision_mask = 17
collision_priority = 2.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/NavigationRegion3D/Wall/static_wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_uf1g1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/NavigationRegion3D/Wall/static_wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0587294, -1, 0)
mesh = SubResource("BoxMesh_2k128")
skeleton = NodePath("../..")

[node name="Interface" type="Node" parent="."]

[node name="Healthbar" type="Control" parent="Interface"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("4_rt6ft")

[node name="Healthbar" type="ProgressBar" parent="Interface/Healthbar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -13.5
offset_right = 132.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_sawlw")
theme_override_styles/fill = SubResource("StyleBoxFlat_ixlpq")
show_percentage = false

[node name="Label_FPS" type="Label" parent="Interface"]
offset_right = 141.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(0, 0.639216, 0, 1)
script = ExtResource("6_2yjxy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.8574, 30.3508, -15.591)
